--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ authors:
     display_name: AI
     avatar: 'assets/images/profile-4.png'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
-    #email: wowthemesnet@gmail.com
+    email: animeshchatarjee@gmail.com
     #web: https://www.wowthemes.net
     #twitter: https://twitter.com/wowthemesnet
     description: "WhatsApp Geek"
