--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ favicon: 'assets/images/logo.png'
 baseurl: ''
 google_analytics: 'UA-143612101-1'
 disqus: 'whatsappgroups-app'
+email: 'animeshchatarjee@gmail.com'
 #mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
@@ -27,7 +28,7 @@ authors:
     display_name: DB    
     avatar: 'assets/images/profile-3.png'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
-    #email: wowthemesnet@gmail.com
+    email: animeshchatarjee@gmail.com
     #web: https://www.wowthemes.net
     #twitter: https://twitter.com/wowthemesnet
     description: "Jack of all. Master of none."
