--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 name: "WhatsApp Groups"
-title: "10000+ WhatsApp Group Join Links 2019 - Shayari, Masti, Cricket, BJP"
+title: ""
 description: "Find and join 10000+ whatsapp groups - Shayari, Masti, Jobs, Friends, News, BJP, Cricket and many more."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
