--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,15 @@ authors:
     #web: https://www.wowthemes.net
     #twitter: https://twitter.com/wowthemesnet
     description: "WhatsApp Geek"
+  ab:
+    name: AB
+    display_name: AB
+    avatar: 'assets/images/profile-3.png'
+    gravatar: b1cc14991db7a456fcd761680bbc8f81
+    email: animeshchatarjee@gmail.com
+    #web: https://www.wowthemes.net
+    #twitter: https://twitter.com/wowthemesnet
+    description: "WhatsApp Expert."
   db:
     name: DB
     display_name: DB    
