--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: ''
 google_analytics: 'UA-143612101-1'
-disqus: 'whatsappgroups-app'
+#disqus: 'whatsappgroups-app'
 email: 'animeshchatarjee@gmail.com'
 #mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
