--- a/_config.yml
+++ b/_config.yml
@@ -95,18 +95,4 @@ adsense-data-ad-slot: "1363087678"
 # Lazy Images ("enabled" or "disabled")
 lazyimages: "enabled"
 
-# Exclude the following from the Jekyll build process.
-# Note: "vendor" is for Travis CI.
-#exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock]
-exclude: ["changelog.md",
-          "LICENSE.txt",
-          "README.md",
-          "vendor",
-          "_assets",
-          "Gemfile",
-          "Gemfile.lock",
-          "gulpfile.js",
-          "node_modules",
-          "package.json"]
-
-
+exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock]
