--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,16 @@ authors:
     #web: https://www.wowthemes.net
     #twitter: https://twitter.com/wowthemesnet
     description: "Jack of all. Master of none."
+  vb:
+    name: Var B.
+    display_name: VB    
+    avatar: 'assets/images/profile-3.png'
+    gravatar: b1cc14991db7a456fcd761680bbc8f81
+    email: animeshchatarjee@gmail.com
+    #web: https://www.wowthemes.net
+    #twitter: https://twitter.com/wowthemesnet
+    description: "Master of words."
+
 
 # Plugins
 plugins:
