--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,15 @@ authors:
     #web: https://www.wowthemes.net
     #twitter: https://twitter.com/wowthemesnet
     description: "Master of words."
-
+  ss:
+    name: Shar S.
+    display_name: SS    
+    avatar: 'assets/images/profile-3.png'
+    gravatar: b1cc14991db7a456fcd761680bbc8f81
+    email: animeshchatarjee@gmail.com
+    #web: https://www.wowthemes.net
+    #twitter: https://twitter.com/wowthemesnet
+    description: "Blog expert!"
 
 # Plugins
 plugins:
